log
Sat 29 Apr 2023 11:42:02 PM UTC: 
 tests:  0|5
total_score: 0/70
67163a8
Wed 03 May 2023 04:58:43 AM UTC: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:7: error: variable ‘auxCol’ set but not used [-Werror=unused-but-set-variable]
   55 |   int auxCol = 0;
      |       ^~~~~~
sudoku.c:54:7: error: variable ‘auxFila’ set but not used [-Werror=unused-but-set-variable]
   54 |   int auxFila = 0;
      |       ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a2529ef
Wed 03 May 2023 05:02:49 AM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 0/70
ac285dc
Wed 03 May 2023 05:03:52 AM UTC: 
 sudoku.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 0/70
26bc85c
Wed 03 May 2023 05:06:24 AM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a4be696
Wed 03 May 2023 05:07:45 AM UTC: 
 sudoku.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
6436548
